final version of website mostly completed

--- a/files/styles.css
+++ b/files/styles.css
@@ -344,3 +344,8 @@ caption {
     margin-top: 5px;
     margin-bottom: 5px;
 }
+
+.table-3-hightlight {
+    color: #007bff;
+    font-weight: bold;
+}
